Css/style.css
/* Container Style */

.page-container {
    position: relative;
    min-height: 100vh;
    padding: 3rem 0 5rem 0;
}

.content-wrap {
    padding-bottom: 2.5rem;
}

/* Main Page */

.formCard {
    margin-bottom: 0px;
}


/* Product Page */

.ProductPageTable table {
    margin: auto;
}

.ProductPageTable .photo {
    padding: 2rem 3rem 2rem 3rem;
    margin: 5rem;
    min-width: 500px;
}

.ProductPageTable img {
    width: 500px;
    height: auto;
}

hr {
    width: 25%;
}

ul {
    margin: 2rem 2rem 2rem 0;
    max-width: 400px;
}

.ProductPageTable th {
    text-align: center;
    padding-bottom: 0.5rem;
}

.ProductPageTable table,
.ProductPageTable th {
    border: black 2px solid;
}


/* Register Product Page*/

.RegisterPageStyle {
    text-align: center;
}

.RegisterPageStyle h2 {
    margin-bottom: 1rem;
}

.RegisterPageStyle input[type=file] {
    text-align-last: end;
}


/* About Page */

.AboutPageStyle {
    overflow: hidden;
}

/* Settings Page */

.listingPage {
    box-sizing: border-box;
}

.listingPage ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.listingPage ul li {
    border: 1px solid #ddd;
    margin-top: -1px; /* Prevent double borders */
    background-color: #f6f6f6;
    padding: 12px;
}

/* Footer */

footer {
    background-color: #343A40;
    margin-top: 2rem;
    padding: 2rem 0 2rem 0;
    text-align: center;
    color: white;
    position: absolute;
    bottom: 0;
    width: 100%;
}

footer span {
    margin: 0 1rem 0 0;
    padding: .5rem 1rem .5rem 1rem;
    border-radius: .5rem;
    font-size: 1.25rem;
}

.AB {
    background-color: green;
    color: black;
}

.AM {
    background-color: teal;
    color: black;
}

.AN {
    background-color: darkred;
    color: black;
}

.YY {
    background-color: gold;
    color: black;
}

/* Themes */
.theme1
{
    background-color: #DCE2F0;
    color: #50586C;
}

.theme1Contrast
{
    background-color: #50586C !important;
    color: #DCE2F0 !important;
}

.theme2
{
    background-color: #FCF6F5;
    color: #2BAE66;
}

.theme2Contrast
{
    background-color: #2BAE66 !important;
    color: #FCF6F5 !important;
}

.theme3
{
    background-color: #DBB98F;
    color: #96351F;
}

.theme3Contrast
{
    background-color: #96351F !important;
    color: #DBB98F !important;
}

.theme4
{
    background-color: #F9D142;
    color: #292826;
}

.theme4Contrast
{
    background-color: #292826 !important;
    color: #F9D142 !important;
}

.themeButton
{
    border-radius: 100px;
    font-weight: bold;
    border:none;
    padding: 5px 10px 5px 10px;
    margin: 5px;
}

.bgWhite
{
    background-color: white;
}

